# Haskell_From_First_Principles

./: README.md
10-Folding/: DbProcessing.hs  errorFolds.hs  foldrTest.hs
13-Building-Projects/hangman/: hangman.cabal
13-Building-Projects/hangman/.stack-work/: stack.sqlite3
13-Building-Projects/hangman/.stack-work/install/x86_64-linux/ef77ec4d6a04e9791f13a6553bd9013b4dfb871b9a929f0b4f3ac0ea520c7960/8.6.5/pkgdb/: hangman-0.1.0.0-BPKFiitKHgY9UNJJ1Vngoh.conf  package.cache
13-Building-Projects/hangman/exe/: Main.hs
13-Building-Projects/hangman/src/: Game.hs  Hangman.hs  Words.hs
2-Basic-Expressions-And-Functions/: LetToWhereExercises.hs  OrderingExercises.hs  ParenthizationExercises.hs  StandardDeviation.hs  WhereAndLet.hs  areaOfCircle.hs  formattingExercises.hs  learn.hs
3-Strings/: exercises1.hs  print2.hs  print3.hs  print4.hs
4-Basic-Datatypes/: exercises.hs
5-Types/: doesItCompile.hs  exercises.hs  fixIt.hs  moreTypeExercises.hs  typeKwonDo.hs  typeSig.hs  typeToFunc.hs
6-Type-Classes/: chapterExercises.hs  eqExercises.hs  polymorphicTypeclass.hs  trivial.hs  typeKwonDoTwo.hs  weekDay.hs
7-More-Functional-Patterns/: arith4.hs  casePractice.hs  composition.hs  exercises.hs  grabBag.hs  hofs.hs
8-Recursion/: dividedBy.hs  exercises.hs  factorial.hs  fibb.hs  mc91.hs  wordNumber.hs
9-Lists/: char.hs  cipher.hs  enumFromTo.hs  lists.hs  safeHead.hs  squareCube.hs  theFearfulSymmerty.hs  zip.hs
misc/: newt.hs  stdev.hs
