name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
homepage:            https://github.com/Stefanwullems/Haskell_From_First_Principles
license:             BSD3
license-file:        LICENSE
author:              Stefan Wullems
maintainer:          stefanwullems1998@gmail.com
copyright:           2019 Stefan Wullems
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable hangman
  main-is:             Main.hs
  hs-source-dirs:      exe
  build-depends:       base >= 4.7 && < 5
                     , hangman 
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Words
                     , Hangman
                     , Game
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
  default-language:    Haskell2010